--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="">
 
-    
+  <title>Leslie Steen</title>  
 </head>
 <body>
-Coming soon... 29 June 2018
-  <img src="landkaartendigitaallijn(vegetatie)-08.png">
+Leslie Steen
   </body>
 </html>
