--- a/index.html
+++ b/index.html
@@ -1,15 +1,71 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
-  <meta name="description" content="">
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Leslie Steen</title>  
-</head>
-<body>
-Leslie Steen
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+
+    <title>Leslie Steen</title>
+  </head>
+  <body>
+
+<div class="container-fluid headerrow">
+  <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-7">
+        <h1 class="hoofdtitel">Leslie Steen</h1>
+      </div>
+  </div>
+</div>
+
+
+<div class="container-fluid ">
+
+  <div class="row videorow">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+       <img class="image" src="Assets/usb.gif">
+      </div>
+      <p><b>Vrije publicatie</b>   2017</p>
+    </div>
+         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+       <img class="image" src="Assets/wunderkammer$.gif">
+      </div>
+      <p><b>Wunderkammer</b> 2016</p>
+    </div>
+  </div><!-- row-->
+ 
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <img class="image" src="Assets/delta.gif">
+      </div>
+      <p><b>Delta font</b> 2017</p>
+    </div>
+          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+       <img class="image" src="Assets/tumblr_onc9p3DJ2y1rk5wi1o7_1280.gif">
+      <p><b>Ghent Art Book Fair </b>2017</p>
+    </div>
+  </div><!-- row-->
+
+  <div class="row">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+      <div class="embed-responsive embed-responsive-16by9">
+        <img class="image" src="Assets/sleeves.gif">
+      <p><b>Innersleeves</b> 2016</p>
+    </div>
+  </div><!-- row-->
+
+
+</div><!-- container-->
+
+
+
   </body>
 </html>
