--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   <div class="row videorow">
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="Assets/usb.gif">
+       <img class="image" src="usb.gif">
       </div>
       <p><b>Vrije publicatie</b>   2017</p>
     </div>
          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="Assets/wunderkammer$.gif">
+       <img class="image" src="wunderkammer$.gif">
       </div>
       <p><b>Wunderkammer</b> 2016</p>
     </div>
@@ -43,13 +43,13 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-        <img class="image" src="Assets/delta.gif">
+        <img class="image" src="delta.gif">
       </div>
       <p><b>Delta font</b> 2017</p>
     </div>
           <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="Assets/tumblr_onc9p3DJ2y1rk5wi1o7_1280.gif">
+       <img class="image" src="tumblr_onc9p3DJ2y1rk5wi1o7_1280.gif">
       <p><b>Ghent Art Book Fair </b>2017</p>
     </div>
   </div><!-- row-->
@@ -57,7 +57,7 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-        <img class="image" src="Assets/sleeves.gif">
+        <img class="image" src="sleeves.gif">
       <p><b>Innersleeves</b> 2016</p>
     </div>
   </div><!-- row-->
