--- a/index.html
+++ b/index.html
@@ -15,57 +15,66 @@
 
 <div class="container-fluid headerrow">
   <div class="row">
-      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-7">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <h1 class="hoofdtitel">Leslie Steen</h1>
       </div>
   </div>
 </div>
 
 
-<div class="container-fluid ">
+<div class="container-fluid">
 
   <div class="row videorow">
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="usb.gif">
-      </div>
+       <img class="image" src="usb2.gif"> </div>
       <p><b>Vrije publicatie</b>   2017</p>
     </div>
          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="wunderkammer$.gif">
-      </div>
+       <img class="image" src="wunderkammer2.gif"></div>
       <p><b>Wunderkammer</b> 2016</p>
     </div>
   </div><!-- row-->
  
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+    <div class="row videorow">
+     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
       <div class="embed-responsive embed-responsive-16by9">
-        <img class="image" src="delta.gif">
+       <img class="image" src="delta.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);">
       </div>
       <p><b>Delta font</b> 2017</p>
     </div>
-          <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
       <div class="embed-responsive embed-responsive-16by9">
-       <img class="image" src="tumblr_onc9p3DJ2y1rk5wi1o7_1280.gif">
+        <img class="image" src="gabf.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);"></div>
       <p><b>Ghent Art Book Fair </b>2017</p>
     </div>
-  </div><!-- row-->
-
-  <div class="row">
-    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-6">
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
       <div class="embed-responsive embed-responsive-16by9">
-        <img class="image" src="sleeves.gif">
-      <p><b>Innersleeves</b> 2016</p>
+          <img class="image" src="madness.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);"></div>
+      <p><b>Minima Docta</b> 2016</p>
     </div>
-  </div><!-- row-->
+  </div><!-- row-->    
 
-
-</div><!-- container-->
-
-
+    <div class="row videorow">
+     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <div class="embed-responsive embed-responsive-16by9">
+       <img class="image" src="sensaties.gif">
+      </div>
+      <p><b>Sensaties</b> 2014</p>
+    </div>
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <div class="embed-responsive embed-responsive-16by9">
+        <img class="image" src="gabf.gif"></div>
+      <p><b>Ghent Art Book Fair </b>2017</p>
+    </div>
+    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+      <div class="embed-responsive embed-responsive-16by9">
+          <img class="image" src="madness.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);"></div>
+      <p><b>Minima Docta</b> 2016</p>
+    </div>
+  </div><!-- row-->  
+      </div>
 
   </body>
 </html>
