--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
       <div class="embed-responsive embed-responsive-16by9">
-        <img class="image" src="gabf.gif"></div>
-      <p><b>Ghent Art Book Fair </b>2017</p>
+        <img class="image" src="woody.gif"></div>
+      <p><b>Woody Allen </b>2016</p>
     </div>
     <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
       <div class="embed-responsive embed-responsive-16by9">
-          <img class="image" src="madness.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);"></div>
-      <p><b>Minima Docta</b> 2016</p>
+          <img class="image" src="sushi.gif" style="box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 40px 0 rgba(0, 0, 0, 0.19);"></div>
+      <p><b>De Filmavonden: Cinema Sushi</b> 2018</p>
     </div>
   </div><!-- row-->  
       </div>
